# newsletter-agent-bulletin

./: PROJECT_FLOW.md  README.md  pyproject.toml  readme.md  sources.example.json  sources.json
local_test_site/: article-1.html  index.html
newsletter-agent/: __init__.py  agent.py  cli.py  config.py  fetcher.py  models.py  renderer.py  summarizer.py
newsletter-agent.egg-info/: PKG-INFO  SOURCES.txt  entry_points.txt  readme.md  top_level.txt
