[build-system]
requires = ["setuptools>=68", "wheel"]
build-backend = "setuptools.build_meta"

[project]
name = "newsletter-agent"
version = "0.1.0"
description = "Research agent that collects articles and curates a biweekly newsletter in Markdown."
readme = "README.md"
requires-python = ">=3.10"
dependencies = [
    "beautifulsoup4>=4.12.0",
    "openai>=1.0.0",
    "requests>=2.31.0",
]

[project.scripts]
newsletter-agent = "newsletter_agent.cli:main"

[tool.setuptools.packages.find]
include = ["newsletter_agent*"]
